fixes issue 282 + support Valgrind format with DrMem types   - added an example to suppression test: "Dr.Memory:UNADDRESSABLE ACCESS"   - added a warning about using deprecated legacy format + added valgrind2drmemory.pl script that converts Memcheck   suppressions to DrMem suppressions.   - tries to handle mangled symbols with wildcards and does     a good job on most, but it's not an easy problem and in     some cases it is impossible to know for sure what was meant:     I thought about having the user pass in the executable (w/     Valgrind suppression limitations there's like to be only one app per     suppression file) but analyzing its symbols gets complex too.   - installed into build bin/ and exports bin/   - documented how to use it   - tested on chromium/src/tools/valgrind/memcheck/suppressions.txt     and /usr/lib/valgrind/default.supp   - on chrome file, fails on 8 frames: 3 have no wildcards and are buggy     frames (somebody copied another symbol and incorrectly modified it w/o     changing the embedded length specifiers), and the other 5 are very     complex and not a single one exists in today's chrome build. + bailing for now on the idea of having the client support mangled-wildcard   frames at runtime: not worth it w/ the script in place, which IMHO is a   better solution as it allows the user to then edit and append to the   new-format file.  perhaps for now a user would still use Memcheck on   Linux, but hopefully in a year or so we can have 64-bit Linux Dr. Memory   good enough that there's no reason to keep suppressions for both tools.
For testing I did not do any runs, simply ensured the suppressions were
valid by reading them back in (and reading originals):
  > bin/valgrind2drmemory.pl ~/work/chromium/src/tools/valgrind/memcheck/suppressions.txt /tmp/x
  > bin/valgrind2drmemory.pl /usr/lib/valgrind/default.supp /tmp/y
  > bin/drmemory.pl -suppress /usr/lib/valgrind/default.supp -suppress /tmp/y -suppress ~/work/chromium/src/tools/v
  > grep f

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -391,8 +391,21 @@ myranlib.dll!GenRanHelper*
 myranlib.dll!GenRan*
 \endcode
 
-Valgrind-style suppressions are supported, but currently only with
-unmangled C++ symbols.
+For users with existing Valgrind Memcheck suppression files, Dr. Memory
+supports Valgrind-style suppressions, but not with mangled C++ symbols.
+On Linux, a script called \p valgrind2drmemory.pl is provided in the bin
+directory that can be used to convert a legacy Valgrind suppression file to
+the Dr. Memory format.  It uses heuristics to convert mangled C++ symbols
+that contain wildcards and may not succeed on complex types (it prints a
+warning for those it fails on).  Use it like this:
+
+\code
+bin/valgrind2drmemory.pl /path/to/old-supp-file /path/to/new-drmem-towrite
+\endcode
+
+The Dr. Memory suppression format is more powerful then the Valgrind format
+and matches the Windows module!function standards used by other tools.  We
+recommend converting to the Dr. Memory format from a legacy format.
 
 Another method of ignoring errors is to filter the reported errors to focus
 on particular source files.  Use the \p -srcfilter option to do this:
