--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -341,15 +341,25 @@ one showing \p <module+offset> type frames and the other \p module!function
 constant (e.g., \p 0x4af) and is the offset from the start of the module.
 Either type of call stack can be used and it is enough if one
 of those two is specified.   The \p module!function are more general and
-more robust across different versions of a module.  Also, the \p
-module!function callstacks support "*" and "?" wildcards in either the module or
-function name, and they support prefix matching.  Prefix matching means
-that the callstack in the suppression file is considered a match if it
-matches the top of any actual callstack during a run.  This allows
+more robust across different versions of a module.
+
+In order to simplify writing suppressions, callstacks support "*" and "?"
+wildcards in either the module or function name (or offset for \p
+<module+offset>).  A "*" matches any number of characters of any kind.  A
+"?" matches a single character of any kind.  C++ functions should be in
+their unmangled form.  If a literal "*" is desired, a "?" should usually be
+used instead to avoid the "*" wildcard expansion.
+
+Callstacks automatically employ support prefix matching.  Prefix matching
+means that the callstack in the suppression file is considered a match if
+it matches the top of any actual callstack during a run.  This allows
 specifying only the first few frames of a callstack and have it match any
 callstack whose first frames match those frames, regardless of subsequent
-frames. Also, you can use "..." lines in suppressions. Such lines match
-zero or more frames in the callstack.
+frames.
+
+A final type of wildcard frame is supported: "...".  A callstack frame
+consisting of the string "..." matches zero or more frames in the
+callstack.
 
 Suppression files can have empty lines and comment lines (begining with #).
 There should be no leading white space for the actual suppression information.
