fixes issue 123 major new feature: detect mismatched use of malloc/new/new[] vs free/delete/delete[] + was already intercepting operator delete on windows but not   the others which are now all consider heap layers + operators are non-adjusting heap layers (otherwise have problems   handling placement new) + relaxed i#257 default supp b/c operator may no longer be on stack (xref i#639) + on linux, looking only for the two default operator types   (default and nothrow) via mangled syms: so currently won't   find other overloads there + on cygwin, like linux, looking for VS-mangled operators + for the size routine of the alloc set: if dynamic lib (e.g., libstdc++   or msvcp*) use dynamic libc.  if static, use corresponding libc in same   module. + store flag on allocation type, report mismatch as   INVALID_HEAP_ARGUMENT w/ special message + include callstack of allocation in error report + new strategy on module unload: walk hashtable instead of re-query + handle issues with /MD asymmetric inlining and private operator wrappers:   first had to fix libc ident on windows to enable ignoring operator   mismatch when outer layer is msvcrNN.dll + added (more) tests to cs2bug.cpp, though cygwin won't detect   all due to asymmetric inline problem and lack of symbols.   I had to use fault handlers around all mismatch tests, and exit() at   end, b/c of heap corruption and crashes on windows.
SVN-Revision: 564

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,8 +60,14 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between version 1.4.5 and 1.4.4 include:
+ - The tool now detects mismatched use of malloc/new/new[] vs
+   free/delete/delete[]
+ - Added a script to convert Memcheck suppression files to
+   the Dr. Memory format.
+ - Performance improvements on large applications via a symbol cache
  - Renamed the -check_cmps option to -check_uninit_cmps
  - Renamed the -check_non_moves option to -check_uninit_non_moves
+ - Various bug fixes
 
 The changes between version 1.4.4 and 1.4.3 include:
  - Fix for missing output in cmd on Win7 SP1
