fixes issue 642 fixes issue 643 + i#642: decided to not keep callstacks just for mismatch.   added alloc and dealloc routine names for better report w/   -no_count_leaks and removed neighbor info. + i#643: do not report mismatch when delete==delete[] + added -check_delete_mismatch option to control feature + added notes to the docs on Visual Studio optimizations and leak   counting affecting mismatch detection
separately, added a note to chromium drmem docs about Release build
preventing mismatch detection

SVN-Revision: 572

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -657,7 +657,7 @@ free() versus operator delete versus operator delete[].  This will be
 reported as:
 
 \code
-Error #4: INVALID HEAP ARGUMENT: wrong free/delete/delete[] called
+Error #4: INVALID HEAP ARGUMENT: allocated with operator new[], freed with operator delete
 # 0 test_mismatch                   [cs2bug.cpp:122]
 # 1 main                            [cs2bug.cpp:139]
 Note: memory was allocated here:
@@ -666,7 +666,12 @@ Note: # 1 main                            [cs2bug.cpp:139]
 \endcode
 
 For code compiled with Visual Studio, detecting such mismatches relies on
-having debug information.
+having debug information.  Certain Visual Studio optimizations can also
+preclude the ability to detect mismatches when using a static C library, so
+using either a Debug build of your application or linking to the dynamic C
+library may be required to identify these bugs.  Also note that if leak
+counting is completely disabled via \p -no-count_leaks then the callstack
+of the allocation will not be reported on a mismatch.
 
 ********************
 \subsection sec_leaks Memory Leaks
