fixes issue 687 + only swap thread back to private sys state if was private to begin with + relies on DR API addition dr_using_app_state() + nudge thread swap
SVN-Revision: 626

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -59,6 +59,9 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between version 1.4.6 and 1.4.5 include:
+ - Various bug fixes
+
 The changes between version 1.4.5 and 1.4.4 include:
  - The tool now detects mismatched use of malloc/new/new[] vs
    free/delete/delete[]
