add note about not supporting cygwin symbols
SVN-Revision: 655

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -130,6 +130,11 @@ In order to obtain line number information, compile your target
 application with debugging information enabled (e.g., "/Zi" for cl.exe
 or "-g" for gcc or g++).
 
+On Linux, Dr. Memory supports ELF files with DWARF2 line information.  On
+Windows, Dr. Memory supports PDB debug information (produced by Visual
+Studio).  The Windows release of Dr. Memory does not support symbols for
+applications built with gcc or g++ on Windows.
+
 If you want to run your application with stripped libraries or binaries and
 have the unstripped versions in separate locations, you can point at those
 locations using the \p DRMEMORY_LIB_PATH environment variable, which is a
