fixes issue 752 Add GDI usage checks beyond init/addr
Added 7 GDI API usage checks:
+ check: proper pairing GetDC|ReleaseDC and CreateDC|DeleteDC
+ check: whether ReleaseDC is called from the same thread that called GetDC
+ check: CreateCompatibleDC is not used after creating thread exits
+ check: whether any non-default objects are selected in a DC being deleted
+ check: do not delete HGDIOBJ that is selected in any DC
+ check: do not operate on a single DC from two different threads
+ check: do not select the same bitmap into two different DC's
Let's open new issues if we want further checks.

They are reported as errors of type WARNING.
Syscall infrastructure calls into new file gdicheck.c.

However, for some objects, SelectObject does all its work in usermode
and does not call the syscall.  It does this for stock objects pre-win7, so
I'm disabling this feature there.  Even on win7, this means we miss some
checks (though no false positives).
i#764 covers adding interception of library routines, via drwrap.

I also:
+ marked HDC-returning syscalls as SYSINFO_RET_ZERO_FAIL
+ added a test of all 7 checks: tests/gdi.cpp
+ added some DC tests to app_suite/ntgdi_tests_win.cpp
+ add docs
+ suppress some GDI errors seen in system libs

SVN-Revision: 717

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -717,6 +717,25 @@ Error #12: WARNING: heap allocation failed
 # 4 KERNEL32.dll!BaseProcessStart                   
 \endcode
 
+Dr. Memory also identifies common errors in using the Windows GDI API and
+reports these errors as warning.  For example:
+
+\code
+Error #15: WARNING: GDI usage error: DC 0x2d011230 that contains selected object being deleted
+# 0 system call NtGdiDeleteObjectApp                            
+# 1 GDI32.dll!DeleteDC                                                        +0x11     (0x76b458c5 <GDI32.dll+0x158c5>)
+# 2 chrome.dll!skia::BitmapPlatformDevice::BitmapPlatformDeviceData::ReleaseBitmapDC [c:\src\chromium\src\skia\ext\bitmap_platform_device_win.cc:58]
+# 3 chrome.dll!SkRefCnt::unref                                                 [c:\src\chromium\src\third_party\skia\include\core\skrefcnt.h:60]
+# 4 chrome.dll!SkRefCnt::unref                                                 [c:\src\chromium\src\third_party\skia\include\core\skrefcnt.h:60]
+# 5 chrome.dll!SkCanvas::internalRestore                                       [c:\src\chromium\src\third_party\skia\src\core\skcanvas.cpp:824]
+# 6 chrome.dll!SkCanvas::~SkCanvas                                             [c:\src\chromium\src\third_party\skia\src\core\skcanvas.cpp:449]
+\endcode
+
+Note that some of these GDI usage errors are best programming practices and
+may not result in detrimental behavior in actual usage on more recent
+versions of Windows.  Detection of these errors can be disabled with the \p
+-no_check_gdi runtime option.
+
 ****************************************************************************
 ****************************************************************************
 */
